Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivolve-website-ingress
spec:
  rules:
  - host: ivolve-website.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ivolve-website-service
            port:
              number: 8081
